# codi

./: Baraja.cpp  Baraja.h  Board.cpp  Board.h  CMakeLists.txt  Card.cpp  Card.h  Carta.cpp  Carta.h  Deck.cpp  Deck.h  Game.cpp  Game.h  Juego.cpp  Juego.h  Pila.cpp  Pila.h  Stack.cpp  Stack.h  Tablero.cpp  Tablero.h  main.cpp
